# open-webui-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
deployment/: README.md
deployment/scripts/: health-check.sh  install.sh  logs.sh  restart.sh  setup.sh  start.sh  status.sh  stop.sh
deployment/systemd/: open-webui-mcp.service
scripts/: generate_tools.py
scripts/templates/: test_tool.py.j2  tool_standard.py.j2
src/: __init__.py  config.py  exceptions.py  server.py
src/models/: __init__.py  base.py  chat.py  errors.py  model.py  user.py
src/services/: __init__.py  client.py
src/tools/: __init__.py  base.py  factory.py
src/tools/adds/: __init__.py  add_memory_memories_add_tool.py
src/tools/admin/: __init__.py  admin_health_tool.py
src/tools/audio/: __init__.py  get_audio_config_audio_config_tool.py  get_models_audio_models_tool.py  get_voices_audio_voices_tool.py  speech_audio_speech_tool.py  transcription_audio_transcriptions_tool.py  update_audio_config_audio_config_update_tool.py
src/tools/auths/: __init__.py  add_user_auths_add_tool.py  delete_key_auths_key_tool.py  generate_key_auths_key_tool.py  get_admin_config_auths_admin_config_tool.py  get_admin_details_auths_admin_details_tool.py  get_key_auths_key_tool.py  get_ldap_config_auths_admin_config_ldap_tool.py  get_ldap_server_auths_admin_config_ldap_server_tool.py  get_session_user_auths_tool.py  ldap_auth_auths_ldap_tool.py  signin_auths_signin_tool.py  signout_auths_signout_tool.py  signup_auths_signup_tool.py  update_admin_config_auths_admin_config_tool.py  update_ldap_config_auths_admin_config_ldap_tool.py  update_ldap_server_auths_admin_config_ldap_server_tool.py  update_password_auths_update_password_tool.py  update_profile_auths_update_profile_tool.py
src/tools/channels/: __init__.py  add_reaction_to_message_channels_id_messages_message_id_reactions_add_tool.py  get_channels_channels_tool.py  (+12 more)
src/utils/: __init__.py  error_handler.py  logging_utils.py  rate_limiter.py  url_builder.py  validation.py
tests/: README.md  conftest.py
tests/fixtures/: openapi_responses.py
tests/integration/: conftest.py  test_local_api.py
tests/unit/: test_config.py  test_exceptions.py
(+683 files in other folders)
